--- a/.github/workflows/test_scraper.yml
+++ b/.github/workflows/test_scraper.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Abhängigkeiten installieren
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
+          pip install requests playwright
+          playwright install
 
       - name: Test-Scraper ausführen
         env:
@@ -29,7 +30,7 @@ jobs:
           python main.py
 
       - name: Logs als Artifact hochladen
-        uses: actions/upload-artifact@v4  # <-- aktualisierte Version
+        uses: actions/upload-artifact@v4
         with:
           name: logs_test
-          path: logs_test.txt
+          path: news_log.json   # <-- Datei anpassen
