test_scraper.yml

--- a/.github/workflows/test_scraper.yml
+++ b/.github/workflows/test_scraper.yml
@@ -2,6 +2,9 @@ name: SEB Monitor Test
 
 # Nur manuell auslösen
 on:
+  schedule:
+    - cron: '*/1 * * * *'  # jede Minute
+
   workflow_dispatch:
 
 jobs:
